Added about-us section

--- a/index.html
+++ b/index.html
@@ -75,6 +75,40 @@ Released   : 20140228
 		</div>
 	</div>
 </div>
-
+<div id="about-us">
+	<div class="container">
+		<div style = "text-align: center;" class="title">
+			<h2>About Us</h2>
+			<span class="byline">
+				Center for Entrepreneurial Leadership (CEL) is a Center for Excellence at BITS Pilani, Pilani Campus
+			</span>
+		</div>
+		<div class="content-box">
+			<div class="content-one">
+				<div class="image-left">
+					<img src="./images/about-us-img.JPG" alt="">
+				</div>
+				<div class="content-right">
+					<p>As the Entrepreneurship Cell of one of the premier institutes of the country, the prime focus of the organization 
+						is to provide an environment conducive to promoting the entrepreneurial spirit and related skills among not only 
+						the students of the college but all across the nation.
+					</p>
+				</div>
+			</div>	
+		</div><div class="content-box">
+			<div class="content-two">
+				<div class="image-right">
+					<img src="./images/about-us-img2.jpg" alt="">
+				</div>
+				<div class="content-left">
+					<p>
+						Through an amalgamation of various projects, we aspire to cater to the interests of a wide variety of people - ranging from students with
+						 an entrepreneurial bent to economically weaker sections in the nearby rural areas, as well as established startups in need of funding or mentorship.
+					</p>
+				</div>
+			</div>	
+		</div>
+	</div>
+</div>
 </body>
 </html>
